{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 239,
  "lineage": "21cfa7bf-d119-3145-08db-e6523ad9b6e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jmtf_ec2_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:924691161680:instance/i-0c9bccfaff58eda5d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9bccfaff58eda5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jm_bastion_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04ec9e4d09f463645",
            "private_dns": "ip-10-0-3-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.136",
            "public_ip": "54.80.146.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0da804b28895e6da1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0301bcdafff154dc1",
            "tags": {
              "Name": "jmtf_ec2_bastion"
            },
            "tags_all": {
              "Name": "jmtf_ec2_bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019108f6646194cdb"
            ]
          },
          "dependencies": [
            "aws_security_group.jmtf_ec2_bastion_sg",
            "aws_subnet.jmtf_public_sub_1",
            "aws_vpc.jmtf_play_vpc",
            "module.keypair.aws_key_pair.bastion_key",
            "module.keypair.tls_private_key.jmtf_bastion_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jmtf_ec2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:924691161680:instance/i-000b87b4ca42f897c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000b87b4ca42f897c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jm_bastion_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09f1fbe56a422e7a5",
            "private_dns": "ip-10-0-1-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-019a89c11d7c02165",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da884bf81464e19b",
            "tags": {
              "Name": "jmtf_ec2_private"
            },
            "tags_all": {
              "Name": "jmtf_ec2_private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-046c0ec99f86af080"
            ]
          },
          "dependencies": [
            "aws_security_group.jmtf_ec2_bastion_sg",
            "aws_security_group.jmtf_ec2_private_sg",
            "aws_subnet.jmtf_private_sub_1",
            "aws_vpc.jmtf_play_vpc",
            "module.keypair.aws_key_pair.bastion_key",
            "module.keypair.tls_private_key.jmtf_bastion_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jmtf_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924691161680:internet-gateway/igw-001118a51dcc57ffc",
            "id": "igw-001118a51dcc57ffc",
            "owner_id": "924691161680",
            "tags": {
              "Name": "jmtf_gw"
            },
            "tags_all": {
              "Name": "jmtf_gw"
            },
            "vpc_id": "vpc-0b0ecccb852428832"
          },
          "dependencies": [
            "aws_vpc.jmtf_play_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jmtf_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924691161680:route-table/rtb-0a7b854361e11d263",
            "id": "rtb-0a7b854361e11d263",
            "owner_id": "924691161680",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jmtf_prrt"
            },
            "tags_all": {
              "Name": "jmtf_prrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0ecccb852428832"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jmtf_play_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jmtf_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924691161680:route-table/rtb-01bfd88d0bebe95b7",
            "id": "rtb-01bfd88d0bebe95b7",
            "owner_id": "924691161680",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001118a51dcc57ffc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jmtf_purt",
              "Type": "testtag"
            },
            "tags_all": {
              "Name": "jmtf_purt",
              "Type": "testtag"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0ecccb852428832"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jmtf_gw",
            "aws_vpc.jmtf_play_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jmtf_public1_rt_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf5f129bd68f2d34",
            "route_table_id": "rtb-01bfd88d0bebe95b7",
            "subnet_id": "subnet-0301bcdafff154dc1"
          },
          "dependencies": [
            "aws_internet_gateway.jmtf_gw",
            "aws_route_table.jmtf_public_rt",
            "aws_subnet.jmtf_public_sub_1",
            "aws_vpc.jmtf_play_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jmtf_public2_rt_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f759ee1cf7f396bf",
            "route_table_id": "rtb-01bfd88d0bebe95b7",
            "subnet_id": "subnet-01eaacda06017b0bb"
          },
          "dependencies": [
            "aws_internet_gateway.jmtf_gw",
            "aws_route_table.jmtf_public_rt",
            "aws_subnet.jmtf_public_sub_2",
            "aws_vpc.jmtf_play_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jmtf_ec2_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924691161680:security-group/sg-019108f6646194cdb",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-019108f6646194cdb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "924691161680",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0ecccb852428832"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jmtf_play_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jmtf_ec2_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924691161680:security-group/sg-046c0ec99f86af080",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-046c0ec99f86af080",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019108f6646194cdb"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jmtf_bastion_sg",
            "name_prefix": "",
            "owner_id": "924691161680",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0ecccb852428832"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jmtf_ec2_bastion_sg",
            "aws_vpc.jmtf_play_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jmtf_private_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924691161680:subnet/subnet-0da884bf81464e19b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da884bf81464e19b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924691161680",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jmtf_prs1"
            },
            "tags_all": {
              "Name": "jmtf_prs1"
            },
            "vpc_id": "vpc-0b0ecccb852428832"
          },
          "dependencies": [
            "aws_vpc.jmtf_play_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jmtf_private_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924691161680:subnet/subnet-0cc719c4c0ce90757",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc719c4c0ce90757",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924691161680",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jmtf_prs2"
            },
            "tags_all": {
              "Name": "jmtf_prs2"
            },
            "vpc_id": "vpc-0b0ecccb852428832"
          },
          "dependencies": [
            "aws_vpc.jmtf_play_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jmtf_public_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924691161680:subnet/subnet-0301bcdafff154dc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0301bcdafff154dc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924691161680",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jmtf_pus1"
            },
            "tags_all": {
              "Name": "jmtf_pus1"
            },
            "vpc_id": "vpc-0b0ecccb852428832"
          },
          "dependencies": [
            "aws_vpc.jmtf_play_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jmtf_public_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924691161680:subnet/subnet-01eaacda06017b0bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eaacda06017b0bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924691161680",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jmtf_pus2"
            },
            "tags_all": {
              "Name": "jmtf_pus2"
            },
            "vpc_id": "vpc-0b0ecccb852428832"
          },
          "dependencies": [
            "aws_vpc.jmtf_play_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jmtf_play_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924691161680:vpc/vpc-0b0ecccb852428832",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f5a9c07f46c33f3a",
            "default_route_table_id": "rtb-01c1616cea161c01d",
            "default_security_group_id": "sg-0a4f789f1ae28c250",
            "dhcp_options_id": "dopt-0bcbf1ea1eeef5170",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b0ecccb852428832",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c1616cea161c01d",
            "owner_id": "924691161680"
          }
        }
      ]
    }
  ]
}